# pycountrycode

./: .flake8  .gitignore  Makefile  NEWS.md  README.md  README.qmd  csv2pickle.py  pyproject.toml  trash.py
.github/workflows/: lint.yml  main.yml  test.yml
countrycode/: __init__.py  countrycode.py
countrycode/data/: codelist.csv  codelist.pickle
tests/: custom_strategies.py  custom_strategies_polars.py  test_basic.py  test_codelist.py  test_conversion.py  test_conversion_polars.py  test_corner_cases.py  test_custom_dict.py  test_optdep.py  test_regex_external.py  test_regex_internal.py  test_regex_internal_polars.py
