[tool.poetry]
name = "countrycode"
version = "0.4.0"
description = ""
authors = ["Vincent Arel-Bundock <vincent.arel-bundock@umontreal.ca>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
polars = {version = "^0.18.3", optional = true}
pandas = {version = "^2.1.0", optional = true}

[tool.poetry.extras]
polars = ["polars"]
pandas = ["pandas"]


[tool.poetry.group.dev.dependencies]
pytest = "^7.3.2"
jupyter = "^1.0.0"
black = "^23.3.0"
flake8 = "^6.0.0"
isort = "^5.12.0"
hypothesis = "^6.80.0"

[tool.black]
line-length = 110

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
