[project]
name = "pycountrycode"
version = "0.5.0"
description = ""
requires-python = ">=3.9"
dependencies = [
]
authors = [{ name = "Vincent Arel-Bundock", email = "vincent.arel-bundock@umontreal.ca" }]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project.optional-dependencies]
pandas = ["pandas>=2.0.0"]
polars = ["polars>=1.0.0"]
full = ["pandas>=2.0.0", "polars>=1.0.0"]

[tool.uv]
dev-dependencies = [
  "pytest >=8.1.1,<9",
  "pytest-xdist >=3.6.1",
  "ruff>=0.6.4",
  "hypothesis>=6.131.28",
  "pre-commit",
]

[tool.setuptools.package-data]
countrycode = ["data/*.csv"]
